// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> activeTabId is not passed renders the first tab as active 1`] = `
<Fragment>
  <StyledTabs
    borderBottom="2px solid transparent"
    borderColor="border.default"
    display="inline-block"
  >
    <Tab
      active={true}
      aria-controls="tab-1-tab-content"
      aria-selected="true"
      id="tab-1"
      key="tab-1"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex="0"
      title="Tab 1"
    >
      Tab 1
    </Tab>
    <Tab
      active={false}
      aria-controls="tab-2-tab-content"
      aria-selected="false"
      id="tab-2"
      key="tab-2"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex="0"
      title="Tab 2"
    >
      Tab 2
    </Tab>
  </StyledTabs>
  <Box
    id="tab-1-tab-content"
  >
    Tab 1 Content
  </Box>
</Fragment>
`;

exports[`<Tabs /> activeTabId is passed renders the first tab as active 1`] = `
<Fragment>
  <StyledTabs
    activeTabId="tab-2"
    borderBottom="2px solid transparent"
    borderColor="border.default"
    display="inline-block"
  >
    <Tab
      active={false}
      aria-controls="tab-1-tab-content"
      aria-selected="false"
      id="tab-1"
      key="tab-1"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex="0"
      title="Tab 1"
    >
      Tab 1
    </Tab>
    <Tab
      active={true}
      aria-controls="tab-2-tab-content"
      aria-selected="true"
      id="tab-2"
      key="tab-2"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex="0"
      title="Tab 2"
    >
      Tab 2
    </Tab>
  </StyledTabs>
  <Box
    id="tab-2-tab-content"
  >
    Tab 2 Content
  </Box>
</Fragment>
`;
